--- a/dashboard/src/scss/components/dashboard/dashboard.scss
+++ b/dashboard/src/scss/components/dashboard/dashboard.scss
@@ -1,124 +1,10 @@
 @use "../../abstracts/variables";
 @use "../../abstracts/mixins";
 
-.header{
-    background: red;
+.wrapper{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 65%;
 }
-
-// .backdrop{
-//     background: rgba(map-get(variables.$baseVars, "background"), 0.4);
-//     position: relative;
-//     @include mixins.flexBox;
-
-//     &__search{
-//         position: absolute;
-//         width: 100%;
-//         @include mixins.flexBox;
-//         padding: 1rem;
-//         top: 0;
-//         z-index: 1000;
-
-//         &--input{
-//             border: none;
-//             padding: 0.6rem 1rem;
-//             border-radius: 2rem;
-//             background: rgba(map-get(variables.$baseVars, "color"), 0.4);
-//             font-size: 100%;
-
-//             &:focus{
-//                 outline: none;
-//             }
-//         }
-//     }
-//     &__figure{
-//         width: 100%;
-//         height: 35rem;
-//         @include mixins.flexBox;
-//         position: relative;
-//         overflow: hidden;
-//         z-index: 100;
-
-//         &::before{
-//             content: "";
-//             background: map-get(variables.$baseVars, "background");
-//             box-shadow: -2rem -1rem 4rem 2rem map-get(variables.$baseVars, "background");
-//             height: 100%;
-//             width: 20rem;
-//             position: absolute;
-//             right: 20rem;
-//             z-index: 19999;
-//         }
-
-//         &::after{
-//             content: "";
-//             background: map-get(variables.$baseVars, "background");
-//             box-shadow: 2rem 0 4rem 2rem map-get(variables.$baseVars, "background");
-//             height: 100%;
-//             width: 20rem;
-//             position: absolute;
-//             left: 20rem;
-//         }
-
-//         &--image{
-//             width: 65%;
-//             height: 100%;
-//             object-fit: cover;
-//         }
-//     }
-// }
-
-// .details{
-//     display: flex;
-//     justify-content: center;
-//     align-items: start;
-//     gap: 1rem;
-//     width: 50%;
-
-//     &__poster{
-//     width: 20rem;
-//     @include mixins.flexBox;
-
-//         &--image{
-//             width: 100%;
-//             height: 100%;
-//             object-fit: cover;
-//         }
-//     }
-
-//     &__wrapper{
-//         display: flex;
-//         flex-direction: column;
-//         justify-content: center;
-//         align-items: start;
-//     }
-
-//     &__heading{
-//         display: flex;
-//         flex-direction: column;
-//         justify-content: center;
-//         align-items: start;
-//         gap: 0.4rem;
-
-//         &--title{
-//             font-size: 140%;
-//             font-family: map-get(variables.$fontVars, "accent");
-//             font-weight: 800;
-//         }
-//         &--year{
-//             font-size: 90%;
-//             font-weight: 600;
-//         }
-//     }
-
-//     &__text{
-//         display: flex;
-//         flex-direction: column;
-//         justify-content: center;
-//         align-items: start;
-//         font-size: 90%;
-
-//         &--tagline{
-//             text-transform: uppercase;
-//         }
-//     }
-// }
