--- a/dashboard/src/scss/style.scss
+++ b/dashboard/src/scss/style.scss
@@ -2,3 +2,6 @@
 @use "abstracts/base";
 @use "components/header/header.scss";
 @use "components/dashboard/dashboard.scss";
+@use "components/result/result.scss";
+@use "components/cast/cast.scss";
+@use "components/images/images.scss";
