--- a/dashboard/src/scss/components/result/result.scss
+++ b/dashboard/src/scss/components/result/result.scss
@@ -33,11 +33,7 @@
                 overflow: hidden;
 
                 &::after{
-                    content: "";
-                    height: 100%;
-                    position: absolute;
-                    box-shadow: -2rem 0 1rem 0rem rgba(map-get(variables.$baseVars, "red"), 0.4);
-                    width: 1rem;
+                    @include mixins.afterAnimation;
                     @include animations.loading;
                 }
             }
@@ -61,11 +57,7 @@
                 overflow: hidden;
 
                 &::after{
-                    content: "";
-                    height: 100%;
-                    position: absolute;
-                    box-shadow: -2rem 0 1rem 0rem rgba(map-get(variables.$baseVars, "red"), 0.4);
-                    width: 1rem;
+                    @include mixins.afterAnimation;
                     @include animations.loading;
                 }
             }
@@ -102,11 +94,7 @@
                 overflow: hidden;
 
                 &::after{
-                    content: "";
-                    height: 100%;
-                    position: absolute;
-                    box-shadow: -2rem 0 1rem 0rem rgba(map-get(variables.$baseVars, "red"), 0.4);
-                    width: 1rem;
+                    @include mixins.afterAnimation;
                     @include animations.loading;
                 }
             }
@@ -124,14 +112,15 @@
                 overflow: hidden;
 
                 &::after{
-                    content: "";
-                    height: 100%;
-                    position: absolute;
-                    box-shadow: -2rem 0 1rem 0rem rgba(map-get(variables.$baseVars, "red"), 0.4);
-                    width: 1rem;
+                    @include mixins.afterAnimation;
                     @include animations.loading;
                 }
             }
+        }
+
+        &--created{
+            @include mixins.flexBox;
+            gap: 0.6rem;
         }
     }
 
@@ -155,11 +144,7 @@
                 overflow: hidden;
 
                 &::after{
-                    content: "";
-                    height: 100%;
-                    position: absolute;
-                    box-shadow: -2rem 0 1rem 0rem rgba(map-get(variables.$baseVars, "red"), 0.4);
-                    width: 1rem;
+                    @include mixins.afterAnimation;
                     @include animations.loading;
                 }
             }
@@ -183,11 +168,7 @@
                 overflow: hidden;
 
                 &::after{
-                    content: "";
-                    height: 100%;
-                    position: absolute;
-                    box-shadow: -2rem 0 1rem 0 rgba(map-get(variables.$baseVars, "red"), 0.4);
-                    width: 1rem;
+                    @include mixins.afterAnimation;
                     @include animations.loading;
                 }
 
