--- a/dashboard/src/scss/style.scss
+++ b/dashboard/src/scss/style.scss
@@ -5,3 +5,4 @@
 @use "components/result/result.scss";
 @use "components/cast/cast.scss";
 @use "components/images/images.scss";
+@use "abstracts/mediaqueries";
