--- a/dashboard/src/scss/components/cast/cast.scss
+++ b/dashboard/src/scss/components/cast/cast.scss
@@ -3,8 +3,26 @@
 @use "../../abstracts/animations";
 
 .cast{
-    width: 35rem;
-    height: 100%;
+    width: 30rem;
+    height: 90%;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: start;
+    gap: 1rem;
+    background: rgba(map-get(variables.$baseVars, "red"), 0.3);
+    padding: 2rem 1rem;
+    border-radius: 1rem;
+    
+    &__heading{
+        font-weight: 800;
+        display: flex;
+        justify-content: start;
+        align-items: center;
+        width: 100%;
+        font-size: 110%;
+        font-family: map-get(variables.$fontVars, "accent");
+    }
     &__list{
         height: 100%;
         display: flex;
@@ -13,9 +31,13 @@
         align-items: start;
         gap: 1rem;
         list-style: none;
-        padding: 2rem 0;
         overflow: hidden;
         overflow-y: unset;
+        background: rgba(map-get(variables.$baseVars, "red"), 0.3);
+        width: 100%;
+        padding: 0.4rem;
+        border-radius: 0.4rem;
+        border: 0.1rem solid rgba(map-get(variables.$baseVars, "red"), 0.3);
 
         &::-webkit-scrollbar{
             display: none;
@@ -29,14 +51,13 @@
         gap: 1rem;
 
         &--image{
-            width: 5rem;
+            width: 4.5rem;
             aspect-ratio: 1/1;
             object-fit: cover;
             border-radius: 0.2rem;
-            filter: brightness(0);
 
             &-loading{
-                width: 5rem;
+                width: 4.5rem;
                 aspect-ratio: 1/1;
                 background: rgba(map-get(variables.$baseVars, "red"), 0.4);
                 border-radius: 0.2rem;
@@ -50,12 +71,19 @@
             }
         }
 
+        &--placeholder{
+            width: 4.5rem;
+            aspect-ratio: 1/1;
+            background: rgba(map-get(variables.$baseVars, "red"), 0.4);
+            border-radius: 0.2rem;
+        }
+
         &--wrapper{
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: start;
-            font-size: 90%;
+            font-size: 80%;
         }
 
         &--name{
@@ -80,6 +108,7 @@
 
         &--character{
             color: map-get(variables.$baseVars, "accent");
+            font-size: 90%;
             &-loading{
                 background: rgba(map-get(variables.$baseVars, "red"), 0.4);
                 width: 15rem;
