--- a/dashboard/src/scss/components/dashboard/dashboard.scss
+++ b/dashboard/src/scss/components/dashboard/dashboard.scss
@@ -4,7 +4,7 @@
 .wrapper{
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: start;
     width: 100%;
     height: 65%;
 }
