--- a/dashboard/src/scss/components/result/result.scss
+++ b/dashboard/src/scss/components/result/result.scss
@@ -18,15 +18,15 @@
         height: 100%;
 
         &--image{
-            width: 22rem;
-            height: 100%;
+            width: 100%;
+            height: 80%;
             object-fit: cover;
-            filter: brightness(0);
             border-radius: 0.2rem;
+            border: 0.1rem solid rgba(map-get(variables.$baseVars, "red"), 0.3);
 
             &-loading{
                 width: 22rem;
-                height: 35rem;
+                height: 32rem;
                 border-radius: 0.2rem;
                 background: rgba(map-get(variables.$baseVars, "red"), 0.4);
                 position: relative;
@@ -41,11 +41,13 @@
         &--rating{
             @include mixins.flexBox;
             gap: 1rem;
-            font-size: 80%;
+            font-size: 70%;
             width: 100%;
+            color: rgba(map-get(variables.$baseVars, "color"), 0.8);
 
             &-star{
-                font-size: 90%;
+                font-size: 100%;
+                color: map-get(variables.$baseVars, "red");
             }
 
             &-loading{
@@ -83,7 +85,7 @@
         &--title{
             font-family: map-get(variables.$fontVars, "accent");
             font-weight: 800;
-            font-size: 150%;
+            font-size: 140%;
 
             &-loading{
                 background: rgba(map-get(variables.$baseVars, "red"), 0.4);
@@ -121,6 +123,7 @@
         &--created{
             @include mixins.flexBox;
             gap: 0.6rem;
+            font-size: 80%;
         }
     }
 
@@ -130,6 +133,8 @@
         justify-content: start;
         align-items: start;
         width: 40rem;
+        font-size: 90%;
+        color: rgba(map-get(variables.$baseVars, "color"), 0.8);
 
         &--tagline{
             text-transform: uppercase;
@@ -178,6 +183,70 @@
                 &:nth-of-type(6){
                     width: 25rem;
                 }
+            }
+        }
+    }
+    &__seasons{
+        display: flex;
+        justify-content: start;
+        align-items: center;
+        height: 6rem;
+        width: 65%;
+
+        &--item{
+            border: 0.1rem solid rgba(map-get(variables.$baseVars, "red"), 0.2);
+            background: rgba(map-get(variables.$baseVars, "red"), 0.2);
+            display: flex;
+            justify-content: start;
+            align-items: center;
+            gap: 1rem;
+            padding: 0.5rem 1rem;
+            height: 100%;
+            width: 100%;
+            border-radius: 0.4rem;
+            position: relative;
+            
+            &-image{
+                height: 100%;
+                width: 3.5rem;
+                object-fit: cover;
+                border-radius: 0.4rem;
+            }
+            &-wrapper{
+                height: 100%;
+            }
+            &-title{
+                font-size: 80%;
+                font-weight: 600;
+            }
+            &-episodes{
+                font-size: 70%;
+                display: inline;
+                color: map-get(variables.$baseVars, "red");
+            }
+            &-button{
+                color: map-get(variables.$baseVars, "color");
+                border: none;
+                aspect-ratio: 1/1;
+                // border-radius: 50%;
+                position: absolute;
+                background: none;
+                @include mixins.flexBox;
+                border-radius: 50%;
+            }
+            &-icon{
+                font-size: 90%;
+                background: rgba(map-get(variables.$baseVars, "red"), 0.7);
+                width: 2rem;
+                aspect-ratio: 1/1;
+                @include mixins.flexBox;
+                border-radius: 50%;
+            }
+            &-left{
+                left: -1.5rem;
+            }
+            &-right{
+                right: -1rem;
             }
         }
     }
